--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+
+<dependency>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>4.0.0.4121</version>
+</dependency>
+
   </dependencies>
 
   <build>
