--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <sonar.token>sqa_aa80ef0d8eb96a04e6149356019f18a69f635e4f</sonar.token>
+    <sonar.token>${env.TOKEN}</sonar.token>
   </properties>
 
   <dependencies>
