--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <maven.compiler.source>13</maven.compiler.source>
     <maven.compiler.target>13</maven.compiler.target>
     <sonar.token>${env.TOKEN}</sonar.token>
+    <sonar.host.url>sonarqube</sonar.host.url>
   </properties>
 
   <dependencies>
